--- a/services.html
+++ b/services.html
@@ -103,12 +103,17 @@
                 <button class="lang-btn" aria-label="Select Language">
                      <span class="lang-current">EN</span>
                 </button>
+                <div class="lang-dropdown">
+                    <div class="lang-option active" data-lang="en">English</div>
+                    <div class="lang-option" data-lang="hi">हिंदी</div>
+                    <div class="lang-option" data-lang="kn">ಕನ್ನಡ</div>
+                </div>
             </div>
         </div>
         <nav class="primary-nav">
-          <a href="/index.html" class="nav-item">Home</a>
-          <a href="/services.html" class="nav-item active">Services</a>
-          <a href="/index.html#how-it-works" class="nav-item">How It Works</a>
+          <a href="/index.html" class="nav-item" data-i18n="nav_home">Home</a>
+          <a href="/services.html" class="nav-item active" data-i18n="nav_services">Services</a>
+          <a href="/index.html#how-it-works" class="nav-item" data-i18n="nav_how_it_works">How It Works</a>
         </nav>
         <div class="utility-icon">
             <button class="theme-toggle" aria-label="Toggle Dark Mode">
@@ -124,8 +129,8 @@
         <!-- Hero -->
         <section class="services-hero">
             <div class="container">
-                <h1>Our Services</h1>
-                <p>Comprehensive solutions for your home and office needs. Verified, professional, and reliable.</p>
+                <h1 data-i18n="services_page_title">Our Services</h1>
+                <p data-i18n="services_page_sub">Comprehensive solutions for your home and office needs. Verified, professional, and reliable.</p>
             </div>
         </section>
 
@@ -136,49 +141,49 @@
                     <!-- Plumbing -->
                     <a href="/service.html?type=plumbing" class="service-card">
                         <span class="service-icon">🔧</span>
-                        <h3>Plumbing</h3>
-                        <p>Leak repairs, fixture installation, and drainage solutions by expert plumbers.</p>
-                        <span class="service-link">View Details →</span>
+                        <h3 data-i18n="svc_plumbing">Plumbing</h3>
+                        <p data-i18n="svc_plumbing_desc">Leak repairs, fixture installation, and drainage solutions by expert plumbers.</p>
+                        <span class="service-link" data-i18n="link_view_details">View Details →</span>
                     </a>
 
                     <!-- Electrical -->
                     <a href="/service.html?type=electrical" class="service-card">
                         <span class="service-icon">⚡</span>
-                        <h3>Electrical</h3>
-                        <p>Safety-focused wiring, switch repairs, and appliance installation.</p>
-                        <span class="service-link">View Details →</span>
+                        <h3 data-i18n="svc_electrical">Electrical</h3>
+                        <p data-i18n="svc_electrical_desc">Safety-focused wiring, switch repairs, and appliance installation.</p>
+                        <span class="service-link" data-i18n="link_view_details">View Details →</span>
                     </a>
 
                     <!-- Repairs -->
                     <a href="/service.html?type=repairs" class="service-card">
                         <span class="service-icon">🛠️</span>
-                        <h3>General Repairs</h3>
-                        <p>Furniture assembly, carpentry, and general home wear-and-tear fixes.</p>
-                        <span class="service-link">View Details →</span>
+                        <h3 data-i18n="svc_repairs">General Repairs</h3>
+                        <p data-i18n="svc_repairs_desc">Furniture assembly, carpentry, and general home wear-and-tear fixes.</p>
+                        <span class="service-link" data-i18n="link_view_details">View Details →</span>
                     </a>
 
                     <!-- Construction -->
                     <a href="/service.html?type=construction" class="service-card">
                         <span class="service-icon">🏗️</span>
-                        <h3>Construction</h3>
-                        <p>Renovations, tile work, and structural modifications managed by pros.</p>
-                        <span class="service-link">View Details →</span>
+                        <h3 data-i18n="svc_construction">Construction</h3>
+                        <p data-i18n="svc_construction_desc">Renovations, tile work, and structural modifications managed by pros.</p>
+                        <span class="service-link" data-i18n="link_view_details">View Details →</span>
                     </a>
 
                     <!-- Cleaning -->
                     <a href="/service.html?type=cleaning" class="service-card">
                         <span class="service-icon">🧹</span>
-                        <h3>Deep Cleaning</h3>
-                        <p>Full home sanitization, kitchen deep cleans, and floor polishing.</p>
-                        <span class="service-link">View Details →</span>
+                        <h3 data-i18n="svc_cleaning">Deep Cleaning</h3>
+                        <p data-i18n="svc_cleaning_desc">Full home sanitization, kitchen deep cleans, and floor polishing.</p>
+                        <span class="service-link" data-i18n="link_view_details">View Details →</span>
                     </a>
                 
                     <!-- Painting (New/Additional) -->
                     <a href="#" class="service-card" style="opacity: 0.6; pointer-events: none;">
                         <span class="service-icon">🎨</span>
-                        <h3>Painting (Coming Soon)</h3>
-                        <p>Interior and exterior painting with professional finishes.</p>
-                        <span class="service-link">Coming Soon</span>
+                        <h3 data-i18n="svc_painting">Painting (Coming Soon)</h3>
+                        <p data-i18n="svc_painting_desc">Interior and exterior painting with professional finishes.</p>
+                        <span class="service-link" data-i18n="link_coming_soon">Coming Soon</span>
                     </a>
                 </div>
             </div>
@@ -187,8 +192,8 @@
         <!-- Banner -->
         <section class="cta-banner">
             <div class="container">
-                <h2 style="font-size: 32px; margin-bottom: 24px; color: var(--text-main);">Verified quality you can trust.</h2>
-                <a href="#services-grid-section" class="btn btn-primary btn-large">Choose a Service</a>
+                <h2 style="font-size: 32px; margin-bottom: 24px; color: var(--text-main);" data-i18n="banner_title">Verified quality you can trust.</h2>
+                <a href="#services-grid-section" class="btn btn-primary btn-large" data-i18n="btn_choose_service">Choose a Service</a>
             </div>
         </section>
     </main>
