--- a/index.html
+++ b/index.html
@@ -322,12 +322,12 @@
                 <p class="node-desc" data-i18n="service_construction_desc">Small construction and renovation work</p>
             </div>
 
-            <!-- Node 5: Cleaning (Bottom Left) -->
-            <!-- Node 5: Cleaning (Bottom Left) -->
+            <!-- Node 5: Domestic Help (Bottom Left) -->
+            <!-- Node 5: Domestic Help (Bottom Left) -->
             <div class="service-node node-5">
                 <div class="node-icon">🧹</div>
-                <h3 class="node-title" data-i18n="service_cleaning_title">Cleaning</h3>
-                <p class="node-desc" data-i18n="service_cleaning_desc">Professional one-time cleaning services</p>
+                <h3 class="node-title" data-i18n="service_domestic_help_title">Domestic Help</h3>
+                <p class="node-desc" data-i18n="service_domestic_help_desc">Maids, houseboys, and cooks</p>
             </div>
 
           </div>
