--- a/services.html
+++ b/services.html
@@ -177,19 +177,35 @@
                         <span class="service-link" data-i18n="link_view_details">View Details →</span>
                     </a>
 
-                    <!-- Cleaning -->
-                    <a href="/service.html?type=cleaning" class="service-card">
-                        <img src="/icon-cleaning.png" alt="Cleaning" class="service-icon" />
-                        <h3 data-i18n="svc_cleaning">Deep Cleaning</h3>
-                        <p data-i18n="svc_cleaning_desc">Full home sanitization, kitchen deep cleans, and floor polishing.</p>
+                    <!-- Domestic Help -->
+                    <a href="/service.html?type=domestic_help" class="service-card">
+                        <img src="/icon-cleaning.png" alt="Domestic Help" class="service-icon" />
+                        <h3 data-i18n="svc_domestic_help">Domestic Help</h3>
+                        <p data-i18n="svc_domestic_help_desc">Maids, houseboys, and cooks for daily or monthly needs.</p>
                         <span class="service-link" data-i18n="link_view_details">View Details →</span>
                     </a>
                 
-                    <!-- Painting (New/Additional) -->
-                    <a href="#" class="service-card" style="opacity: 0.6; pointer-events: none;">
-                        <span class="service-icon">🎨</span>
-                        <h3 data-i18n="svc_painting">Painting (Coming Soon)</h3>
+                    <!-- Painting -->
+                    <a href="/service.html?type=painter" class="service-card">
+                        <img src="/icon-painter.png" alt="Painting" class="service-icon" />
+                        <h3 data-i18n="svc_painting">Painting</h3>
                         <p data-i18n="svc_painting_desc">Interior and exterior painting with professional finishes.</p>
+                        <span class="service-link" data-i18n="link_view_details">View Details →</span>
+                    </a>
+
+                    <!-- Mechanics -->
+                    <a href="/service.html?type=mechanics" class="service-card">
+                        <img src="/icon-mechanics.png" alt="Mechanics" class="service-icon" />
+                        <h3 data-i18n="svc_mechanics">Mechanics</h3>
+                        <p data-i18n="svc_mechanics_desc">Expert car and bike repairs at your doorstep.</p>
+                        <span class="service-link" data-i18n="link_view_details">View Details →</span>
+                    </a>
+
+                    <!-- Chef (Coming Soon) -->
+                    <a href="#" class="service-card" style="opacity: 0.6; pointer-events: none;">
+                        <img src="/icon-chef.png" alt="Professional Chef" class="service-icon" />
+                        <h3 data-i18n="svc_chef">Professional Chef (Coming Soon)</h3>
+                        <p data-i18n="svc_chef_desc">Gourmet cooking services for events and parties.</p>
                         <span class="service-link" data-i18n="link_coming_soon">Coming Soon</span>
                     </a>
                 </div>
