--- a/services.html
+++ b/services.html
@@ -47,7 +47,10 @@
             padding: 32px;
             transition: all 0.3s ease;
             text-decoration: none;
-            display: block;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
         }
 
         .service-card:hover {
@@ -73,12 +76,14 @@
             font-size: 24px;
             margin-bottom: 12px;
             color: var(--text-main);
+            width: 100%;
         }
 
         .service-card p {
             color: var(--text-secondary);
             margin-bottom: 24px;
             line-height: 1.5;
+            width: 100%;
         }
 
         .service-link {
@@ -86,7 +91,9 @@
             font-weight: 500;
             display: flex;
             align-items: center;
+            justify-content: center;
             gap: 8px;
+            margin-top: auto;
         }
 
         /* Banner Section */
@@ -179,7 +186,7 @@
 
                     <!-- Domestic Help -->
                     <a href="/service.html?type=domestic_help" class="service-card">
-                        <img src="/icon-cleaning.png" alt="Domestic Help" class="service-icon" />
+                        <img src="/icon-domestic_help.png" alt="Domestic Help" class="service-icon" />
                         <h3 data-i18n="svc_domestic_help">Domestic Help</h3>
                         <p data-i18n="svc_domestic_help_desc">Maids, houseboys, and cooks for daily or monthly needs.</p>
                         <span class="service-link" data-i18n="link_view_details">View Details →</span>
