--- a/services.html
+++ b/services.html
@@ -282,7 +282,7 @@
     </script>
 
         <!-- Services Grid -->
-        <section class="services-grid-section">
+        <section class="services-grid-section" id="services-grid-section">
             <div class="container">
                 <div class="services-listing-grid">
                     <!-- Plumbing -->
