--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
             <p data-i18n="footer_copyright">© 2026 NODE Industries within India. All rights reserved.</p>
         </div>
       </footer>
-    </main>
-    <script type="module" src="main.js"></script>
+    <script src="translations.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
