--- a/services.html
+++ b/services.html
@@ -1362,9 +1362,7 @@
     </div>
 
     <!-- Popup Logic -->
-    <script type="module">
-        import { translations } from './translations.js';
-
+    <script>
         document.addEventListener('DOMContentLoaded', () => {
             const popupOverlay = document.getElementById('premiumBookNowPopup');
             const popupContainer = document.getElementById('premiumPopupContainer');
