--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <nav class="primary-nav">
           <a href="/src/pages/services.html" class="nav-item" data-i18n="nav_services">Services</a>
           <a href="#how-it-works" class="nav-item" data-i18n="nav_how_it_works">How It Works</a>
-          <a href="#" class="nav-item" data-i18n="nav_professionals">For Professionals</a>
+          <a href="/src/pages/partners.html" class="nav-item" data-i18n="nav_professionals">Partners</a>
         </nav>
 
         <!-- 3. CENTER: Location Selector -->
@@ -113,7 +113,7 @@
         <nav class="mobile-nav">
             <a href="/src/pages/services.html" class="mobile-nav-item" data-i18n="nav_services">Services</a>
             <a href="#how-it-works" class="mobile-nav-item" data-i18n="nav_how_it_works">How It Works</a>
-            <a href="#" class="mobile-nav-item" data-i18n="nav_professionals">For Professionals</a>
+            <a href="/src/pages/partners.html" class="mobile-nav-item" data-i18n="nav_professionals">Partners</a>
             <!-- Mobile Location Selector could go here too if needed, keeping it simple for now -->
             <div class="mobile-location">
                 <span>📍 <span data-i18n="location_bangalore">Bengaluru, KA</span></span>
