--- a/src/pages/services.html
+++ b/src/pages/services.html
@@ -765,7 +765,7 @@
         <nav class="primary-nav">
           <a href="/src/pages/services.html" class="nav-item active" data-i18n="nav_services">Services</a>
           <a href="/index.html#how-it-works" class="nav-item" data-i18n="nav_how_it_works">How It Works</a>
-          <a href="#" class="nav-item" data-i18n="nav_professionals">For Professionals</a>
+          <a href="/src/pages/partners.html" class="nav-item" data-i18n="nav_professionals">Partners</a>
         </nav>
 
         <!-- 3. CENTER: Location Selector -->
