--- a/src/pages/partners.html
+++ b/src/pages/partners.html
@@ -261,7 +261,8 @@
             <div class="container text-center">
                 <h1 class="hero-title" data-i18n="partners_hero_title">Work with NODE</h1>
                 <p class="hero-subtitle" data-i18n="partners_hero_sub">Build consistent demand. Operate with structure. Deliver with professionalism.</p>
-                <a href="#partner-form" class="btn-primary btn-large" data-i18n="partners_btn_cta">Become a Partner</a>
+                <!-- Aligned with global button styles -->
+                <a href="#partner-form" class="btn btn-primary" data-i18n="partners_btn_cta">Become a Partner</a>
             </div>
         </section>
 
@@ -423,7 +424,8 @@
                         </div>
 
                         <div class="form-submit text-center">
-                            <button type="submit" class="btn-primary form-btn" id="submitBtn" data-i18n="partners_btn_submit">Submit Application</button>
+                            <!-- Aligned with global button styles -->
+                            <button type="submit" class="btn btn-primary" id="submitBtn" data-i18n="partners_btn_submit">Submit Application</button>
                         </div>
                     </form>
                 </div>
@@ -434,7 +436,7 @@
         <section class="partner-cta text-center animate-on-scroll">
             <div class="container">
                 <h2 data-i18n="partners_final_cta">Ready to grow with structure?</h2>
-                <a href="#partner-form" class="btn-primary btn-large" style="margin-top: 24px;" data-i18n="partners_btn_cta">Become a Partner</a>
+                <a href="#partner-form" class="btn btn-primary" style="margin-top: 24px;" data-i18n="partners_btn_cta">Become a Partner</a>
             </div>
         </section>
     </main>
