--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
         </nav>
 
         <!-- 3. CENTER: Location Selector -->
-        <div class="location-selector">
+        <div class="location-selector" id="globalLocationBtn">
           <span class="location-icon">📍</span>
-          <span class="location-text" data-i18n="location_bangalore">Bengaluru, KA</span>
+          <span class="location-text" id="globalLocationText" data-i18n="location_bangalore">Bengaluru, KA</span>
           <span class="location-arrow">▼</span>
         </div>
 
@@ -65,7 +65,8 @@
                 <path d="M11 19C15.4183 19 19 15.4183 19 11C19 6.58172 15.4183 3 11 3C6.58172 3 3 6.58172 3 11C3 15.4183 6.58172 19 11 19Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 <path d="M21 21L16.65 16.65" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
              </svg>
-            <input type="text" placeholder="Find a trusted professional near you" class="search-input" data-i18n="search_placeholder" />
+            <input type="text" id="globalSearchInput" placeholder="Find a trusted professional near you" class="search-input" data-i18n="search_placeholder" autocomplete="off" />
+            <div id="globalSearchDropdown" class="search-dropdown"></div>
           </div>
         </div>
 
